syntax = "proto3";

package workout;

service WorkoutService {
  rpc GetWorkout (GetWorkoutRequest) returns (GetWorkoutResponse);
  rpc CreateWorkout (CreateWorkoutRequest) returns (CreateWorkoutResponse);
  rpc UpdateWorkout (UpdateWorkoutRequest) returns (UpdateWorkoutResponse);
  rpc DeleteWorkout (DeleteWorkoutRequest) returns (DeleteWorkoutResponse);
}

message Workout {
  string id = 1;
  string title = 2;
  string description = 3;
  string userId = 4;
}

message GetWorkoutRequest {
  string id = 1;
}

message GetWorkoutResponse {
  Workout workout = 1;
}

message CreateWorkoutRequest {
  string title = 1;
  string description = 2;
  string userId = 3;
}

message CreateWorkoutResponse {
  Workout workout = 1;
}

message UpdateWorkoutRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string userId = 4;
}

message UpdateWorkoutResponse {
  Workout workout = 1;
}

message DeleteWorkoutRequest {
  string id = 1;
}

message DeleteWorkoutResponse {
  Workout workout = 1;
}
